--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,9 @@
 <div class="container">
+
  <%=  "Here's a list of anagrams for #{@word}" %>
 <ul>
  <% @anagrams.each do |anagram| %>
-  <li><%= anagram %></li>
+  <li><%= anagram.word %></li>
  <% end %>
 </ul>
 </div>
