--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,17 @@
 <div class="container">
+  <div class="anagram-form">
+    <form action="/" method="post">
+    <br/>
+    <input type="text" name="dictionary_word">
+    <input type="submit" value="find anagrams">
+  </div>
 
+<% if @anagrams %>
  <%=  "Here's a list of anagrams for #{@word}" %>
 <ul>
  <% @anagrams.each do |anagram| %>
   <li><%= anagram.word %></li>
+ <% end %>
  <% end %>
 </ul>
 </div>
